Fixed the issue of the page going off-screen by adding overflow-x: hidden; to the element main

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,10 +12,16 @@ html {
 }
 
 body {
+	max-width: 100vw;
 	background-color: c.$bg;
 	font-family: "Inter", sans-serif;
 	color: c.$light;
 	overflow-x: hidden;
+}
+
+main {
+	overflow-x: hidden;
+	
 }
 
 .full-poss {
@@ -77,7 +83,7 @@ body {
 	top: 0;
 	left: 0;
 	z-index: 500;
-	width: 100%;
+	width: 100vw;
 	min-height: 9rem;
 	display: flex;
 	justify-content: space-between;
@@ -125,6 +131,10 @@ body {
 		position: fixed;
 		top: 0;
 		left: 100%;
+		min-width: 100vw;
+		max-width: 100vw;
+		min-height: 100vh;
+		max-height: 100vh;
 		z-index: 800;
 		background-color: c.$bg-two;
 		transition: left 0.3s;
